--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8"/>
         <title>GLOOGLE GLASS</title>
-        <link rel="stylesheet" href="_css/estilo.css">
-        <link rel="stylesheet" href="_css/form.css">
-        <script src="_javascript/funcoes.js"></script>
+        <link rel="stylesheet" href="css/estilo.css">
+        <link rel="stylesheet" href="css/form.css">
+        <script src="javascript/funcoes.js"></script>
         <script>
             function calc_total() {
                 var qtd = parseInt(document.getElementById('cQtd').value);
@@ -23,18 +23,18 @@
 <h2>A revolução do Google está chegando</h2>
         </hgroup>
         <figure>
-            <img src="_imagens/glass-logo-peq.jpg" >
+            <img src="imagens/glass-logo-peq.jpg" >
         </figure>
 
-<img id="icone" src="_imagens/multimidia.png">
+<img id="icone" src="imagens/multimidia.png">
 <nav id="menu">
 <h1>Menu Principal</h1>
 <ul>
-    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="index.html">Home</a></li>
-    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
-    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
-    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
-    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+    <li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="index.html">Home</a></li>
+    <li onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
+    <li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
+    <li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
+    <li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
 </ul>     
 </nav>
         </header>
