--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8"/>
         <title>GLOOGLE GLASS</title>
-        <link rel="stylesheet" href="_css/estilo.css">
-        <script src="_javascript/funcoes.js"></script>
+        <link rel="stylesheet" href="css/estilo.css">
+        <script src="javascript/funcoes.js"></script>
     </head>
 
     <body>
@@ -15,18 +15,18 @@
 <h2>A revolução do Google está chegando</h2>
         </hgroup>
         <figure>
-            <img src="_imagens/glass-logo-peq.jpg" >
+            <img src="imagens/glass-logo-peq.jpg" >
         </figure>
 
-<img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+<img id="icone" src="imagens/glass-oculos-preto-peq.png">
 <nav id="menu">
 <h1>Menu Principal</h1>
 <ul>
-    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
-    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
-    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
-    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
-    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+    <li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
+    <li onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+    <li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+    <li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
+    <li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
 </ul>     
 </nav>
         </header>
@@ -51,7 +51,7 @@ desbloqueio de tela para o acessório.</p>
 [AQUI ENTRA UMA FOTO]
 
 <figure class="foto-legenda">
-    <img src="_imagens/glass-quadro-homem-mulher.jpg">  
+    <img src="imagens/glass-quadro-homem-mulher.jpg">  
     <figcaption>
         <h3>Gloogle Glass</h3>
         <p>Uma nova maneira de ver o mundo.</p>
@@ -92,7 +92,7 @@ destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mes
 <h2>Vídeo mais recente</h2>
 
 <video id="filme" controls="controls">
-    <source src="_media/how-it-feels.mp4" type="video/mp4"/>
+    <source src="media/how-it-feels.mp4" type="video/mp4"/>
 </video>
 
 <h2>Novidades no Glass</h2>
