--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="css/estilo.css">
         <link rel="stylesheet" href="css/form.css">
         <script src="javascript/funcoes.js"></script>
+        <link rel="stylesheet" href="css/responsive.css">
         <script>
             function calc_total() {
                 var qtd = parseInt(document.getElementById('cQtd').value);
