--- a/multimidia.html
+++ b/multimidia.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="css/estilo.css">
         <link rel="stylesheet" href="css/media.css">
         <script src="javascript/funcoes.js"></script>
+        <link rel="stylesheet" href="css/responsive.css">
     </head>
 
     <body>
