--- a/specs.html
+++ b/specs.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="css/estilo.css">
         <script src="javascript/funcoes.js"></script>
         <link rel="stylesheet" href="css/specs.css"> 
+        <link rel="stylesheet" href="css/responsive.css">
     </head>
 
     <body>
