--- a/google-glass.html
+++ b/google-glass.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="css/responsive.css">
         <meta charset="utf-8"/>
         <title>Informações sobre Google Glass </title>
         <style>
@@ -39,6 +40,7 @@
             }
 
         </style>
+        
     </head>
     <body>
 
