--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>GLOOGLE GLASS</title>
         <link rel="stylesheet" href="css/estilo.css">
         <script src="javascript/funcoes.js"></script>
+        <link rel="stylesheet" href="css/responsive.css">
     </head>
 
     <body>
