Projeto web final.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@ câmera e GPS, você pode se situar, assim como selecionar opções com o movime
 <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu 
 destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-[AQUI ENTRA UM VÍDEO]
+<video id="filme" controls="controls">
+    <source src="media/one-day.mp4" type="video/mp4"/>
+</video>
 
 </article>
 </section>
