--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mes
 <h2>Vídeo mais recente</h2>
 
 <video id="filme" controls="controls">
-    <source src="media/how-it-feels.mp4" type="video/mp4"/>
+    <source src="media/how-it-feels.mp4">
 </video>
 
 <h2>Novidades no Glass</h2>
